adicionando-redes-sociais

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     </div>
 
     <div class="redes">
-        <i class="fa-brands fa-instagram fa-2xl" style="color: #ffffff;"></i>
-        <i class="fa-brands fa-square-youtube fa-2xl" style="color: #ffffff;"></i>
-        <i class="fa-brands fa-square-facebook fa-2xl" style="color: #ffffff;"></i>
-        <i class="fa-brands fa-tiktok fa-2xl" style="color: #ffffff;"></i>
+        <a href="https://www.instagram.com/mariabonita.berloques/" target="_blank"><i class="fa-brands fa-instagram" style="color: #ffffff; font-size: 2.8rem;"></i></a>
+        <a href="https://www.youtube.com/channel/UC3-4ZGDefOOB8QlptnO00-A" target="_blank"><i class="fa-brands fa-square-youtube" style="color: #ffffff; font-size: 2.8rem"></i></a>
+        <a href="https://www.facebook.com/mariabonita.berloques/?locale=pt_BR" target="_blank"><i class="fa-brands fa-square-facebook" style="color: #ffffff; font-size: 2.8rem"></i></a>
+        <a href="https://www.tiktok.com/@mariabonitaberloques?is_from_webapp=1&sender_device=pc" target="_blank"><i class="fa-brands fa-tiktok" style="color: #ffffff; font-size: 2.8rem"></i></a>
     </div>
 
 </body>
