mudando-o-icone-adicionando-cor-no-mobile

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#EEE1E2">
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="shortcut icon" type="imagex/png" href="img/Maria-Bonita-Berloques.ico">
     <script src="https://kit.fontawesome.com/c054adb4c7.js" crossorigin="anonymous"></script>
     <title>Atendimento Maria Bonita Berloques</title>
 </head>
