--- a/index.html
+++ b/index.html
@@ -3,47 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#EEE1E2">
+    <meta name="theme-color" content="#E5CFCE">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="shortcut icon" type="imagex/png" href="img/Maria-Bonita-Berloques.ico">
+    <link rel="shortcut icon" type="imagex/png" href="img/Berlocaria.ico">
     <script src="https://kit.fontawesome.com/c054adb4c7.js" crossorigin="anonymous"></script>
-    <title>Atendimento Maria Bonita Berloques</title>
+    <title>Atendimento Berlocaria</title>
 </head>
 <body>
     <header class="nav-bar">
         <img src="img/logo.png">
     </header>
     
+    <div class="imagem-site">
+        <img src="img/img-ex.png">
+    </div>
+
     <div class="btn">
         <button>
-            <a href="https://api.whatsapp.com/send?phone=5519984600694&text=Ol%C3%A1%2C+estou+vindo+do+Instagram+de+voc%C3%AAs..." target="_blank">
+            <a href="https://api.whatsapp.com/send/?phone=5519981820119&text=Ol%C3%A1%2C+estou+vindo+do+Instagram+de+voc%C3%AAs..." target="_blank">
                 <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i>
-                Consultora Rebeca
+                Consultora Letícia
             </a>
         </button>
     </div>
     <div class="btn">
         <button>
-            <a href="https://api.whatsapp.com/send?phone=5519996207981&text=Ol%C3%A1%2C+estou+vindo+do+Instagram+de+voc%C3%AAs..." target="_blank">
+            <a href="https://api.whatsapp.com/send/?phone=5519981182803&text=Ol%C3%A1%2C+estou+vindo+do+Instagram+de+voc%C3%AAs..." target="_blank">
                 <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i>
-                Consultora Leticia
+                Consultora Larissa
             </a>
         </button>
     </div>
 
     <div class="btn">
         <button>
-            <a href="https://mariabonitaberloques.com.br/" target="_blank">
+            <a href="https://berlocariaetc.com.br/" target="_blank">
                 Website
             </a>
         </button>
     </div>
 
     <div class="redes">
-        <a href="https://www.instagram.com/mariabonita.berloques/" target="_blank"><i class="fa-brands fa-instagram" style="color: #ffffff; font-size: 2.8rem;"></i></a>
-        <a href="https://www.youtube.com/channel/UC3-4ZGDefOOB8QlptnO00-A" target="_blank"><i class="fa-brands fa-square-youtube" style="color: #ffffff; font-size: 2.8rem"></i></a>
-        <a href="https://www.facebook.com/mariabonita.berloques/?locale=pt_BR" target="_blank"><i class="fa-brands fa-square-facebook" style="color: #ffffff; font-size: 2.8rem"></i></a>
-        <a href="https://www.tiktok.com/@mariabonitaberloques?is_from_webapp=1&sender_device=pc" target="_blank"><i class="fa-brands fa-tiktok" style="color: #ffffff; font-size: 2.8rem"></i></a>
+        <a href="https://www.instagram.com/berlocariaetc/" target="_blank"><i class="fa-brands fa-instagram" style="color: #C79CA3; font-size: 2.8rem;"></i></a>
     </div>
 
 </body>
