--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
     <div class="redes">
         <a href="https://www.instagram.com/berlocariaetc/" target="_blank"><i class="fa-brands fa-instagram" style="color: #C79CA3; font-size: 2.8rem;"></i></a>
+        <a href="https://www.youtube.com/@berlocaria5780" target="_blank"><i class="fa-brands fa-square-youtube" style="color: #C79CA3; font-size: 2.8rem"></i></a>
     </div>
 
 </body>
