--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button>
             <a href="https://api.whatsapp.com/send/?phone=5519981820119&text=Ol%C3%A1%2C+estou+vindo+do+Instagram+de+voc%C3%AAs..." target="_blank">
                 <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i>
-                Consultora Letícia
+                Vendas Atacado
             </a>
         </button>
     </div>
@@ -30,7 +30,7 @@
         <button>
             <a href="https://api.whatsapp.com/send/?phone=5519981182803&text=Ol%C3%A1%2C+estou+vindo+do+Instagram+de+voc%C3%AAs..." target="_blank">
                 <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i>
-                Consultora Larissa
+                Vendas Atacado
             </a>
         </button>
     </div>
