--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 
     <div class="btn">
         <button>
+            <a href="https://api.whatsapp.com/send/?phone=5519987816461&text=Ol%C3%A1%2C+estou+vindo+do+Instagram+de+voc%C3%AAs..." target="_blank">
+                <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i>
+                Vendas Atacado
+            </a>
+        </button>
+    </div>
+    <div class="btn">
+        <button>
             <a href="https://api.whatsapp.com/send/?phone=5519981820119&text=Ol%C3%A1%2C+estou+vindo+do+Instagram+de+voc%C3%AAs..." target="_blank">
                 <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i>
                 Vendas Atacado
