--- a/index.html
+++ b/index.html
@@ -20,33 +20,37 @@
 
     <div class="btn">
         <button>
+            <img src="img/foto-leticia.png">
             <a href="https://api.whatsapp.com/send/?phone=5519987589899&text=Ol%C3%A1%2C+estou+vindo+do+Instagram+de+voc%C3%AAs..." target="_blank">
                 <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i>
-                Vendas Atacado
+                Vendedora Leticia
             </a>
         </button>
     </div>
     <div class="btn">
         <button>
+        
             <a href="https://api.whatsapp.com/send/?phone=5519987816461&text=Ol%C3%A1%2C+estou+vindo+do+Instagram+de+voc%C3%AAs..." target="_blank">
                 <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i>
-                Vendas Atacado
+                Vendedora Barbara
             </a>
         </button>
     </div>
     <div class="btn">
         <button>
+            <img src="img/foto-renata.png">
             <a href="https://api.whatsapp.com/send/?phone=5519981820119&text=Ol%C3%A1%2C+estou+vindo+do+Instagram+de+voc%C3%AAs..." target="_blank">
                 <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i>
-                Vendas Atacado
+                Vendedora Renata
             </a>
         </button>
     </div>
     <div class="btn">
         <button>
+            <img src="img/foto-eduarda.png">
             <a href="https://api.whatsapp.com/send/?phone=5519981182803&text=Ol%C3%A1%2C+estou+vindo+do+Instagram+de+voc%C3%AAs..." target="_blank">
                 <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i>
-                Vendas Atacado
+                Vendedora Eduarda
             </a>
         </button>
     </div>
